--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.example</groupId>
-  <artifactId>spring-boot-example</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>spring-boot-example</name>
-  <description>Demo project for Spring Boot</description>
+  <artifactId>mgrsvc</artifactId>
+  <version>1.0</version>
+  <name>mgrsvc</name>
+  <description>PAM example</description>
 
   <properties>
     <java.version>1.8</java.version>
