--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
       <artifactId>jna</artifactId>
       <version>4.5.2</version>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
