--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -1,10 +1,14 @@
 # This configuration is intended for development purpose, it's **your** responsibility to harden it for production
 version: '2'
 services:
-  mgrweb-app:
+  mgrsvc-app:
     image: mgrsvc
     user: root
     environment:
       - _JAVA_OPTIONS=-Xmx512m -Xms256m
     ports:
       - 8080:8080
+    ##volumes:
+    ##  - /etc/passwd:/etc/passwd
+    ##  - /etc/shadow:/etc/shadow
+
