--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <start-class>com.example.springbootexample.SpringBootExampleApplication</start-class>
+    <start-class>com.mapr.mgrsvc.MgrServiceApplication</start-class>
     <argLine>-Djava.security.egd=file:/dev/./urandom -Xmx256m</argLine>
     <m2e.apt.activation>jdt_apt</m2e.apt.activation>
     <run.addResources>false</run.addResources>
@@ -62,6 +62,11 @@
           <version>RELEASE</version>
           <scope>compile</scope>
       </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.13</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
