--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ server.port=8090
 api.host.baseurl=https://demo.mapr.com:8443/rest
 local.host.baseurl=https://localhost
 api.host.user=root
-api.host.passwd=Gr0@P0tE$@5f^
+api.host.passwd=mapr
+##api.host.passwd=Gr0@P0tE$@5f^
