--- a/src/main/resources/maprparm.properties
+++ b/src/main/resources/maprparm.properties
@@ -3,7 +3,7 @@ volume.parm.replication:3
 volume.parm.minreplication:2
 volume.parm.dare:true
 volume.parm.wiresecurityenabled:true
-volume.parm.rootdirperms:rwx------
+volume.parm.rootdirperms:700
 volume.parm.rootdiruser:@user
 volume.parm.user:@user:dump,restore,m,a,d,fc
 volume.parm.replicationtype:high_throughput
