--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 server.port=8090
-api.host.baseurl=https://demo.mapr.com:8443/rest
+api.host.baseurl=https://rcstest55:8443/rest
 local.host.baseurl=https://localhost
 mapr.cluster.name=demo.mapr.com
 api.host.user=root
-api.host.passwd=mapr
-
-##api.host.passwd=Gr0@P0tE$@5f^
+##api.host.passwd=mapr
+api.host.passwd=Gr0@P0tE$@5f^
