--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ api.host.baseurl=https://rcstest55:8443/rest
 local.host.baseurl=https://localhost
 mapr.cluster.name=demo.mapr.com
 api.host.user=root
-##api.host.passwd=mapr
 api.host.passwd=Gr0@P0tE$@5f^
+dareCheck=true
+##api.host.passwd=mapr
