add totp support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ mapr.cluster.name=demo.mapr.com
 dareCheck=true
 api.host.user=mapr
 api.host.passwd=mapr
+totp.secret=DQZUCXUE7EERM4XXQHANMF6JZJLNP2EJ
